# ROM_2425

./: LICENSE  README.md
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/little_warehouse/lib/little_warehouse/: navigation  navigation_node
ros2_ws/install/little_warehouse/share/ament_index/resource_index/package_run_dependencies/: little_warehouse
ros2_ws/install/little_warehouse/share/little_warehouse/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/little_warehouse/share/little_warehouse/cmake/: little_warehouseConfig.cmake
ros2_ws/install/little_warehouse/share/little_warehouse/launch/: cartographer.launch.py  coppeliasim_no_rviz2.launch.py  navigation_with_speed_limit.launch.py  speed_limit.launch.py
ros2_ws/install/little_warehouse/share/little_warehouse/params/: burgerr.yaml  nav2_params_speed_limit.yaml  orders.yaml
ros2_ws/install/little_warehouse/share/little_warehouse/rviz/: navigation_with_speed_limit.rviz
ros2_ws/log/: latest_build
ros2_ws/src/little_warehouse/: CMakeLists.txt  package.xml
ros2_ws/src/little_warehouse/launch/: cartographer.launch.py  coppeliasim_no_rviz2.launch.py  navigation_with_speed_limit.launch.py  speed_limit.launch.py
ros2_ws/src/little_warehouse/maps/: coppeliasim_map.yaml  speed_mask_coppeliasim_map.yaml
ros2_ws/src/little_warehouse/param/: nav2_params_speed_limit.yaml  positions.yaml
ros2_ws/src/little_warehouse/params/: positions.yaml
ros2_ws/src/little_warehouse/rviz/: tb3_coppeliasim.rviz  tb3_coppeliasim_map.rviz
ros2_ws/src/little_warehouse/src/: navigation_node (copia).cpp  navigation_node (otra copia).cpp  navigation_node.cpp
ros2_ws/src/little_warehouse/urdf/: turtlebot3_burger.urdf  turtlebot3_burger_cam.urdf
