<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>little_warehouse</name>
  <version>1.0.0</version>
  <description>
  Package for the TurtleBot3 CoppeliaSim node. This package allows running simple simulations and tests in CoppeliaSim
  without requiring a physical robot. It also enables visualization and basic testing in RViz without real hardware.
  </description>
  <maintainer email="mbelmar@etsinf.upv.es">Marcos Belda Martinez</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/larmesto/turtlebot3_coppeliasim</url>
  <url type="bugtracker">https://github.com/larmesto/turtlebot3_coppeliasim/issues</url>
  <author email="mbelmar@etsinf.upv.es">Marcos Belda Martinez</author> 
  <author email="aespcor@etsinf.upv.es">Angela Espert Cornejo</author>
  <author email="lfralli@epsa.upv.es">Lourdes Frances Llimera</author>
  
  <depend>ament_cmake</depend>
  
  <depend>rclcpp</depend>
  <depend>yaml-cpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <exec_depend>robot_state_publisher</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
