<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>little_warehouse</name>
  <version>1.0.0</version>
  <description>
    Package for TurtleBot3 coppeliaSim node. With this package, simple tests can be done without a robot.
    You can do simple tests using this package on rviz without real robots.
  </description>
  <maintainer email="leo.armesto@gmail.com">Leopoldo Armesto</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/larmesto/turtlebot3_coppeliasim</url>
  <url type="bugtracker">https://github.com/larmesto/turtlebot3_coppeliasim/issues</url>
  <author email="leo.armesto@gmail.com">Leopoldo Armesto</author>
  <author email="rinese@upv.edu.es">Ricardo Nuñez</author>
  
  <depend>ament_cmake</depend>
  
  <depend>rclcpp</depend>
  <depend>yaml-cpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <!-- <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>turtlebot3_msgs</depend>-->
  <exec_depend>robot_state_publisher</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
